--- a/Styles/main.css
+++ b/Styles/main.css
@@ -54,18 +54,16 @@ p
     color: aliceblue;
 }
 
-nav 
+.Main-Nav 
 {
     background: rgba(0, 12, 93, 0.61);
     width: 100%;
     height: 80px;
     position:fixed;
     top: 0px;
-    /*box-shadow: 0px 10px 20px rgb(21, 0, 249);*/
-    
+    /*box-shadow: 0px 10px 20px rgb(21, 0, 249);*/  
     box-shadow: 0 0 15px #001dff, 0 0 30px #001dff inset;
     border-bottom: 1px solid #00f6ff;
-    
 }
 
 .logo-container 
