--- a/Designs/designs.css
+++ b/Designs/designs.css
@@ -57,3 +57,29 @@ main p
  margin-right: 7%;
 }
 
+.view-more
+{
+ display: inline-block;
+ margin-top: auto;
+ color: #fff;
+ font-weight: bold;
+ text-align: center;
+ padding: 5px 20px;
+ box-shadow: 0 0 15px rgba(0, 255, 255, 0.3), 0 0 30px rgba(0, 255, 255, 0.2); 
+}
+
+.section-wrapper {
+    border: 2px solid rgba(0, 255, 255, 0.4);
+    box-shadow: 0 0 15px rgba(0, 255, 255, 0.3), 0 0 30px rgba(0, 255, 255, 0.2);
+    padding: 20px;
+    margin: 20px;
+    backdrop-filter: blur(3px);
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 10%;    
+}
+
+.img-design
+{
+    width: 800px;
+}
