--- a/Styles/main.css
+++ b/Styles/main.css
@@ -66,6 +66,7 @@ p
     width: 100%;
     height: 80px;
     position:fixed;
+    z-index: 1000;
     top: 0px;
     /*box-shadow: 0px 10px 20px rgb(21, 0, 249);*/  
     box-shadow: 0 0 15px #001dff, 0 0 30px #001dff inset;
@@ -192,7 +193,17 @@ a.active
     display: none;
 }
 
-
+.to-top
+{
+    display: inline-block;
+    margin-top: auto;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    padding: 5px 20px;
+    box-shadow: 0 0 15px rgba(0, 255, 255, 0.3), 0 0 30px rgba(0, 255, 255, 0.2); 
+    margin-right: 5px;
+}
 
 .footer
 {
@@ -226,25 +237,9 @@ footer p a:hover
         display: block;
     }
 
-    .Sub-Nav
-    {
-    border: #00156a;
-    display: flex;
-    align-items: left;
-    justify-content: left;
-    gap: 30px;
-    min-width: 40px;
-    margin-top: 40px;
-    padding: 20px 16px;
-    background: rgba(0, 12, 93, 0.61);
-    top: 81px;
-    /*box-shadow: 0px 10px 20px rgb(21, 0, 249);*/  
-    box-shadow: 0 0 15px #001dff, 0 0 30px #001dff inset;
-    border-top: 1px solid #00f6ff;
-    }
-
     nav ul
     {
+        
         flex-direction: column;
         align-items: flex-start;
         padding-left: 20px;
@@ -276,6 +271,31 @@ footer p a:hover
     #check:checked~ul
     {
         right: 0;
+    }
+
+    .Sub-Nav
+    {
+    border: #00156a;
+    display: flex;
+    align-items: left;
+    justify-content: left;
+    gap: 30px;
+    min-width: 40px;
+    margin-top: 40px;
+    padding: 20px 16px;
+    background: rgba(0, 12, 93, 0.61);
+    top: 81px;
+    /*box-shadow: 0px 10px 20px rgb(21, 0, 249);*/  
+    box-shadow: 0 0 15px #001dff, 0 0 30px #001dff inset;
+    border-top: 1px solid #00f6ff;
+    }
+
+    
+
+    .responsive-image
+    {
+        max-width: 100%;
+        margin: 10px auto;
     }
 }
 
