--- a/Essays/essay.css
+++ b/Essays/essay.css
@@ -10,6 +10,16 @@
     
 }
 
+.container
+{
+    
+    justify-content: center;
+    margin-top: 100px;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-bottom: 5%;  
+}
+
 main article
 {
     margin-left: 7%;
