--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -9,6 +9,16 @@
     margin-top: 10%;    
 }
 
+.container
+{
+    
+    justify-content: center;
+    margin-top: 100px;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-bottom: 5%;  
+}
+
 main article
 {
     margin-left: 7%;
