--- a/Designs/designs.css
+++ b/Designs/designs.css
@@ -85,8 +85,8 @@ main p
     padding: 20px;
     margin: 20px;
     backdrop-filter: blur(3px);
-    margin-left: 2%;
-    margin-right: 2%;
+    margin-left: 10%;
+    margin-right: 10%;
     margin-top: 10%;
     
 }
@@ -96,8 +96,30 @@ main p
     
     justify-content: center;
     margin-top: 100px;
-    margin-left: 2%;
-    margin-right: 2%;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 5%;  
+}
+
+.group-container-wrapper {
+    border: 2px solid rgba(0, 255, 255, 0.4);
+    box-shadow: 0 0 15px rgba(0, 255, 255, 0.3), 0 0 30px rgba(0, 255, 255, 0.2);
+    padding: 20px;
+    margin: 20px;
+    backdrop-filter: blur(3px);
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 10%;
+    
+}
+
+.group-container
+{
+    
+    justify-content: center;
+    margin-top: 100px;
+    margin-left: 10%;
+    margin-right: 10%;
     margin-bottom: 5%;  
 }
 
@@ -106,8 +128,161 @@ main p
     width: 800px;
 }
 
+
+
 .to-top
 {
     color: aliceblue;
     text-align: center;
 }
+
+@media (max-width:1300px)
+{
+
+    .group-container-wrapper {
+        border: 2px solid rgba(0, 255, 255, 0.4);
+        box-shadow: 0 0 15px rgba(0, 255, 255, 0.3), 0 0 30px rgba(0, 255, 255, 0.2);
+        padding: 20px;
+        margin: 20px;
+        backdrop-filter: blur(3px);
+        margin-left: 2%;
+        margin-right: 2%;
+        margin-top: 10%;
+        
+    }
+    
+    .group-container
+    {
+        
+        justify-content: center;
+        margin-top: 100px;
+        margin-left: 2%;
+        margin-right: 2%;
+        margin-bottom: 5%;  
+    }
+}
+
+
+@media (max-width:1100px)
+{
+    .img-design
+    {
+        width: 650px;
+    }
+
+    .img-group
+    {
+        height: 600px;
+    }
+    .group-container-wrapper {
+        border: 2px solid rgba(0, 255, 255, 0.4);
+        box-shadow: 0 0 15px rgba(0, 255, 255, 0.3), 0 0 30px rgba(0, 255, 255, 0.2);
+        padding: 20px;
+        margin: 20px;
+        backdrop-filter: blur(3px);
+        margin-left: 2%;
+        margin-right: 2%;
+        margin-top: 10%;
+        
+    }
+    
+    .group-container
+    {
+        
+        justify-content: center;
+        margin-top: 100px;
+        margin-left: 2%;
+        margin-right: 2%;
+        margin-bottom: 5%;  
+    }
+}
+
+@media (max-width:900px)
+{
+    .img-group
+    {
+        height: 400px;
+    }
+    .container-wrapper {
+        border: 2px solid rgba(0, 255, 255, 0.4);
+        box-shadow: 0 0 15px rgba(0, 255, 255, 0.3), 0 0 30px rgba(0, 255, 255, 0.2);
+        padding: 20px;
+        margin: 20px;
+        backdrop-filter: blur(3px);
+        margin-left: 2%;
+        margin-right: 2%;
+        margin-top: 10%;
+        
+    }
+    
+    .container
+    {
+        
+        justify-content: center;
+        margin-top: 100px;
+        margin-left: 2%;
+        margin-right: 2%;
+        margin-bottom: 5%;  
+    } 
+    
+    .group-container-wrapper {
+        border: 2px solid rgba(0, 255, 255, 0.4);
+        box-shadow: 0 0 15px rgba(0, 255, 255, 0.3), 0 0 30px rgba(0, 255, 255, 0.2);
+        padding: 20px;
+        margin: 20px;
+        backdrop-filter: blur(3px);
+        margin-left: 2%;
+        margin-right: 2%;
+        margin-top: 10%;
+        
+    }
+    
+    .group-container
+    {
+        
+        justify-content: center;
+        margin-top: 100px;
+        margin-left: 2%;
+        margin-right: 2%;
+        margin-bottom: 5%;  
+    }
+
+    .img-design
+    {
+        width: 600px;
+    }
+}
+
+@media (max-width:700px)
+{
+    .img-design
+    {
+        width: 500px;
+    }
+    .img-group
+    {
+        height: 300px;
+    }
+}
+
+@media (max-width:600px)
+{
+    .img-design
+    {
+        width: 400px;
+    }
+    .img-group
+    {
+        height: 200px;
+    }
+}
+@media (max-width:400px)
+{
+    .img-design
+    {
+        width: 100px;
+    }
+}
+
+
+
