--- a/Styles/main.css
+++ b/Styles/main.css
@@ -112,7 +112,7 @@ p
   .logo 
   {
     font-family: "Audiowide", sans-serif;
-    font-size: 18;
+    font-size: 18px;
     color: white;
     line-height: 1;
     margin-top: 10px;
@@ -259,7 +259,7 @@ footer p a:hover
         padding-left: 20px;
         position: fixed;
         width: 50%;
-        background-color: rgba(112, 112, 112, 0.563);
+        background-color: rgba(80, 80, 80, 0.7);
         height: 100vh;
         text-align: left;
         margin-right: 0px;
@@ -289,22 +289,39 @@ footer p a:hover
 
     .Sub-Nav
     {
-    border: #00156a;
-    display: flex;
-    align-items: left;
-    justify-content: left;
-    gap: 30px;
-    min-width: 40px;
-    margin-top: 40px;
-    padding: 20px 16px;
-    background: rgba(0, 12, 93, 0.61);
-    top: 81px;
-    /*box-shadow: 0px 10px 20px rgb(21, 0, 249);*/  
-    box-shadow: 0 0 15px #001dff, 0 0 30px #001dff inset;
-    border-top: 1px solid #00f6ff;
+        display: block;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        gap: 10px;
+        margin-top: 0;
+        padding: 20px;
+        background: rgba(0, 12, 93, 0.85);
+        position: fixed;
+        top: 80px; /* Just below the Main-Nav */
+        width: 100%;
+        z-index: 999; /* Ensures it's above content */
+        box-shadow: 0 0 15px #001dff, 0 0 30px #001dff inset;
+        border-top: 1px solid #00f6ff;
     }
 
+    .Sub-Nav ul {
+        display: flex;
+        flex-direction: column;
+        padding-left: 0;
+        list-style: none;
+        width: 100%;
+    }
     
+    .Sub-Nav ul li {
+        padding: 10px 20px;
+    }
+    
+    .Sub-Nav ul li a {
+        font-size: 18px;
+        display: block;
+        width: 100%;
+    }
 
     .responsive-image
     {
