--- a/Designs/designs.css
+++ b/Designs/designs.css
@@ -16,7 +16,7 @@
 .blog-card 
 {
     display: flex;
-    flex-direction: cloumn;
+    flex-direction: column;
     border: 2px solid rgba(0, 255, 255, 0.4);
     box-shadow: 0 0 15px rgba(0, 255, 255, 0.3), 0 0 30px rgba(0, 255, 255, 0.2);
     padding: 20px;
