--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -1,13 +1,3 @@
-.section-wrapper {
-    border: 2px solid rgba(0, 255, 255, 0.4);
-    box-shadow: 0 0 15px rgba(0, 255, 255, 0.3), 0 0 30px rgba(0, 255, 255, 0.2);
-    padding: 20px;
-    margin: 20px;
-    backdrop-filter: blur(3px);
-    margin-left: 20%;
-    margin-right: 20%;
-    margin-top: 10%;    
-}
 
 .container
 {
@@ -52,7 +42,18 @@ main figure
     }
 }
 
-
+/*Shared styling with main.css
+.section-wrapper {
+    border: 2px solid rgba(0, 255, 255, 0.4);
+    box-shadow: 0 0 15px rgba(0, 255, 255, 0.3), 0 0 30px rgba(0, 255, 255, 0.2);
+    padding: 20px;
+    margin: 20px;
+    backdrop-filter: blur(3px);
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 10%;    
+}
+*/
 
 
 
