--- a/Essays/essay.css
+++ b/Essays/essay.css
@@ -57,7 +57,7 @@ main article
 
     .img-essay
     {
-        width: 400px;
+        width: 500px;
     }
         .group-container-wrapper 
         {
@@ -70,7 +70,7 @@ main article
 {
     .img-essay
     {
-        width: 500px;
+        width: 300px;
     }
 }
 
@@ -86,6 +86,30 @@ main article
 {
     /*For some reason it overrides the main.css footer alignment*/
     text-align: center;
+}
+
+/* HUD Container */
+.hud-circle {
+  position: relative;
+  width: 100px;
+  height: 200px;
+  border-radius: 50%;
+  z-index: 10000;
+  pointer-events: none;
+}
+
+.radar-container {
+    width: 200px;
+    height: 200px;
+    position: relative;
+}
+
+svg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 /* Shared styles with main.css
